--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -21,10 +21,17 @@
   background: url(../images/FondoBienvenida.png);
   background-size: cover;
   height: 100vh;
+  overflow: hidden;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
-.encabezado {
-  background: rgba(0, 0, 0, 0.28);
+.blur {
+  backdrop-filter: blur(4px); // Efecto Blur
+}
+
+.fixed-top {
+  background: rgba(0, 0, 0, 0.6);
 }
 
 .navbar-light .navbar-brand {
@@ -45,7 +52,6 @@
 .navbar-light .navbar-nav .nav-link {
   color: rgba(255, 255, 255, 1);
   text-align: center;
-  margin: .2rem 0;
 }
 
 .navbar-light .navbar-nav .show > .nav-link,
@@ -59,4 +65,28 @@
 .navbar-light .navbar-nav .nav-link:focus {
   color: rgba(255, 255, 255, 1);
   background-color: var(--Active);
+}
+
+.texto-bienvenido {
+  color: white;
+  margin-top: 6rem;
+}
+
+.btn-primary {
+  background-color: #1e0a658e;
+  border-color: #1d0a65;
+  transition: all .5s ease;
+}
+.btn-primary:hover {
+  background-color: #1e0a65bb;
+  border-color: #1d0a65;
+}
+.btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active, .show > .btn-primary.dropdown-toggle {
+  background-color: #1e0a65de;
+  border-color: #1d0a65;
+}
+.btn-primary:focus, .btn-primary.focus {
+  background-color: #1e0a65;
+  border-color: #1d0a65;
+  box-shadow: 0 0 0 0.2rem rgba(6, 8, 116, 0.705);
 }
